--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -338,6 +338,36 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
+  greenwall:
+    label: _(Green Wall nomination)
+    rules:
+      - condition: '"{{location_type}}" === "greenwall" && {{map.zoom}} < 11 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [10, 12]
+          iconAnchor: [5, 12]
+
+      - condition: '"{{location_type}}" === "greenwall" && {{map.zoom}} < 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [24, 29]
+          iconAnchor: [12, 29]
+
+      - condition: '"{{location_type}}" === "greenwall" && {{map.zoom}} >= 13 && {{layer.focused}} === false'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+
+      - condition: '"{{location_type}}" === "greenwall" && {{layer.focused}} === true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-greenwall.png
+          shadowUrl: /static/css/images/marker-shadow.png
+          iconSize: [50, 60]
+          iconAnchor: [25, 60]
+          shadowSize: [50, 60]
+          shadowAnchor: [14, 60]
+
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
@@ -363,6 +393,9 @@ sidebar:
       - title: _(Complaints)
         image: /static/css/images/markers/marker-complaint.png
         url: /filter/complaint
+      - title: _(Green Wall)
+        image: /static/css/images/markers/marker-greenwall.png
+        url: /filter/greenwall
       - title: _(Hide Reports)
         url: /filter/none
         image: /static/css/images/hide-all.png
@@ -433,6 +466,8 @@ place:
           value: idea
         - label: _(Complaint)
           value: complaint
+        - label: _(Green Wall nomination)
+          value: greenwall
       name: location_type
       attrs:
         - key: required
