update form fields and order logic

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -420,15 +420,38 @@ place:
   location_item_name: location
 
   items:
+    - prompt: _(Type of report)
+      type: select
+      options:
+        - label: _(Observation)
+          value: observation
+        - label: _(Question)
+          value: question
+        - label: _(Idea)
+          value: idea
+        - label: _(Complaint)
+          value: complaint
+        - label: _(Green Wall nomination)
+          value: greenwall
+      name: location_type
+      attrs:
+        - key: required
     - prompt: _(Title of report)
       type: text
       name: name
-      optional: true
+      optional:
       attrs:
         - key: placeholder
           value: _(Enter title)
         - key: size
           value: 30
+    - prompt: _(Description)
+      type: textarea
+      name: description
+      optional: true
+      attrs:
+        - key: placeholder
+          value: _(Description...)
     - prompt: _(Your Name)
       type: text
       name: submitter_name
@@ -446,32 +469,9 @@ place:
       sticky: true
       attrs:
         - key: placeholder
-          value: _(Email address)
+          value: _(Receive email updates on your report)
         - key: size
           value: 30
-    - prompt: _(Type of report)
-      type: select
-      options:
-        - label: _(Observation)
-          value: observation
-        - label: _(Question)
-          value: question
-        - label: _(Idea)
-          value: idea
-        - label: _(Complaint)
-          value: complaint
-        - label: _(Green Wall nomination)
-          value: greenwall
-      name: location_type
-      attrs:
-        - key: required
-    - prompt: _(Description)
-      type: textarea
-      name: description
-      optional: true
-      attrs:
-        - key: placeholder
-          value: _(Description...)
     - prompt: _(Image)
       inputfile_label: _(Add an Image)
       type: file
