create youth corps video page

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -533,3 +533,9 @@ pages:
 
   - slug: sponsors
     name: sponsors
+
+  - slug: youthcorps2015
+    name: youthcorps2015
+
+  - slug: test
+  - name: test
