--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -530,6 +530,10 @@ pages:
   - title: _(Get involved)
     slug: getinvolved
     name: contribute
+    
+  - title: _(Green Screen)
+    slug: greenscreen
+    name: greenscreen
 
   - slug: sponsors
     name: sponsors
