remove green screen page from nav

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -530,8 +530,7 @@ pages:
     slug: getinvolved
     name: contribute
     
-  - title: _(Green Screen)
-    slug: greenscreen
+  - slug: greenscreen
     name: greenscreen
 
   - slug: sponsors
