Revert "remove green screen page from nav"
This reverts commit 404cb2d45a8e91e31162f4621dc6d34b509d521c.

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -536,7 +536,8 @@ pages:
     slug: getinvolved
     name: contribute
     
-  - slug: greenscreen
+  - title: _(Green Screen)
+    slug: greenscreen
     name: greenscreen
 
   - slug: sponsors
