Implement ability to remove nav pages from top bar
 - Just add the flag 'hide_from_top_bar: true' to the top-level 'pages' array in config.yml, and the page will not appear in the nav-bar
 - Fixes #212

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -542,6 +542,8 @@ pages:
 
   - slug: sponsors
     name: sponsors
+    hide_from_top_bar: true
 
   - slug: youthcorps2015
     name: youthcorps2015
+    hide_from_top_bar: true
