turn off community vision layer as default

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -134,7 +134,7 @@ map:
       description: _(Places where pollution has been problematic)
       popupContent: '{{title}}'
       legend: true
-      visible: true
+      visible: false
       title: _(Community vision)
       rules:
         # default point marker case
