--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -48,7 +48,7 @@ map:
       # SmarterCleanup Mapbox base layer:
     - id: mapbox-base # unique identifier for the layer
       url: //api.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
-      visible: true
+      visibleDefault: true
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
 
   # Legend Layers
@@ -57,7 +57,7 @@ map:
       url: https://t9t3m4dora.execute-api.us-west-2.amazonaws.com/development/mapbox/community-action
       type: landmark
       legend: true
-      visible: true
+      visibleDefault: true
       title: _(Community vision)
       placeType: communityAction
       description: _(Places where positive restoration and community organizing are happening)
@@ -66,7 +66,7 @@ map:
       url: https://t9t3m4dora.execute-api.us-west-2.amazonaws.com/development/mapbox/restoration-sites
       type: landmark
       legend: true
-      visible: true
+      visibleDefault: true
       title: _(Restoration sites)
       placeType: areasOfConcern
       description: _(Places where pollution has been problematic)
@@ -83,7 +83,7 @@ map:
       description-image: /static/css/images/legend-EPA-ROD.png
       description-image-alt: 'legend'
       title: River cleanup plan
-      visible: false
+      visibleDefault: false
 
       # WMS landuse
     - id: landuse
@@ -97,7 +97,7 @@ map:
       description-image: /static/css/images/legend-landuse2010.png
       description-image-alt: 'legend'
       title: _(Land use data)
-      visible: false
+      visibleDefault: false
 
       # WMS Buildings connection:
     - id: buildings
@@ -109,7 +109,7 @@ map:
       legend: true
       description: _(legend coming soon!)
       title: _(Buildings)
-      visible: false
+      visibleDefault: false
 
       # WMS NLCD
     - id: nlcd
@@ -124,7 +124,7 @@ map:
       description-image: /static/css/images/legend-nlcd2011.png
       description-image-alt: 'legend'
       title: _(Land coverage data)
-      visible: false
+      visibleDefault: false
 
       # WMS Original Flow
     - id: duwamish-original
@@ -137,7 +137,7 @@ map:
       opacity: 0.4
       description: _(The original Duwamish River path)
       title: _(Original river path)
-      visible: false
+      visibleDefault: false
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
