--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -59,7 +59,7 @@ map:
       legend: true
       visibleDefault: true
       title: _(Community vision)
-      placeType: communityAction
+      placeType: mapbox
       description: _(Places where positive restoration and community organizing are happening)
 
     - id: areasOfConcern
@@ -68,7 +68,7 @@ map:
       legend: true
       visibleDefault: true
       title: _(Restoration sites)
-      placeType: areasOfConcern
+      placeType: mapbox
       description: _(Places where pollution has been problematic)
 
       # WMS ROD
@@ -143,7 +143,7 @@ map:
 # The values map the place type to map icons (defined below).
 place_types:
 
-  areasOfConcern:
+  mapbox:
     # Mapbox Points
     rules:
     # show nothing when zoomed out
@@ -203,27 +203,6 @@ place_types:
           iconUrl: /static/css/images/markers/dot-fa307d.png
           iconSize: [16, 16]
           iconAnchor: [8, 8]
-  # Perhaps this can be combined with CommunityAction layers as a "mapbox" placetype?
-  communityAction:
-    rules:
-    # show nothing when zoomed out
-      - condition: '"{{map.zoom}}" < 11'
-    # LineString
-      - condition: '"{{geometry.type}}" == "LineString"'
-        style:
-          color: "{{properties.stroke}}"
-          opacity: '{{properties.stroke-opacity}}'
-          weight: "{{properties.stroke-width}}"
-    # Polygons
-      - condition: '"{{geometry.type}}" == "Polygon"'
-        style:
-          shapeType: polygon
-          fillColor: "{{properties.fill}}"
-          fill: 'true'
-          color: "{{properties.stroke}}"
-          opacity: 0.7
-          fillOpacity: '{{properties.fill-opacity}}'
-          weight: "{{properties.stroke-width}}"
 
   observation:
     label: _(Observation)
