--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -173,6 +173,12 @@ place_types:
           iconSize: [30, 30]
           iconAnchor: [15, 15]
 
+      - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "park2" && "{{map.zoom}}" < 14'
+        icon:
+          iconUrl: /static/css/images/markers/marker-treeheart.png
+          iconSize: [20, 20]
+          iconAnchor: [8, 8]
+
       - condition: '"{{geometry.type}}" == "Point" && "{{properties.marker-symbol}}" === "park2"'
         icon:
           iconUrl: /static/css/images/markers/marker-treeheart.png
