--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -403,7 +403,7 @@ place_types:
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
 
 sidebar:
-  enabled: true
+  enabled: false
   legend_enabled: true
   slug: filter-type
   # Layers are defined in the "map config" section
@@ -424,6 +424,9 @@ sidebar:
       - title: _(Complaints)
         image: /static/css/images/markers/marker-complaint.png
         url: /filter/complaint      
+
+leaflet_sidebar:
+  enabled: true
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
