--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -403,7 +403,7 @@ place_types:
 # TODO: Couple the sidebar and activity stream because the activity stream is a component of the sidebar
 
 sidebar:
-  enabled: true
+  enabled: false
   legend_enabled: true
   slug: filter-type
   # Layers are defined in the "map config" section
@@ -427,6 +427,9 @@ sidebar:
       - title: _(Green Screen Vote)
         image: /static/css/images/markers/marker-greenwall.png
         url: /filter/greenwall
+
+leaflet_sidebar:
+  enabled: true
 
 leaflet_sidebar:
   enabled: true
