--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -465,48 +465,82 @@ place:
     pollution:
       label: _(Pollution)
       fields:
+        - name: type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          optional: false
         - name: title
           type: text
           prompt: _(Pollution title)
+          placeholder: _(Enter title)
           optional: false
         - name: description
           type: textarea
           prompt: _(Pollution description)
+          placeholder: _(Description...)
           optional: false
         - name: name
           type: text
           prompt: _(Your name)
+          placeholder: _(Name)
           optional: true
     land_use:
       label: _(Land use)
       fields:
+        - name: type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          optional: false
         - name: title
           type: text
           prompt: _(Land use title)
+          placeholder: _(Enter title)
           optional: false
         - name: description
           type: textarea
           prompt: _(Land use description)
+          placeholder: _(Description...)
           optional: false
         - name: name
           type: text
           prompt: _(Your name)
+          placeholder: _(Name)
           optional: true
     air_quality:
       label: _(Air quality)
       fields:
+        - name: type
+          type: radio_big_buttons
+          prompt: _(Type of report)
+          optional: false
         - name: title
           type: text
           prompt: _(Air quality title)
+          placeholder: _(Enter title)
           optional: false
         - name: description
           type: textarea
           prompt: _(Air quality description)
+          placeholder: _(Description...)
           optional: false
         - name: name
           type: text
           prompt: _(Your name)
+          placeholder: _(Name)
           optional: true
+
+  dynamic_form_content:
+    radio_big_buttons:
+      - label: _(Observation)
+        value: observation
+      - label: _(Question)
+        value: question
+      - label: _(Idea)
+        value: idea
+      - label: _(Complaint)
+        value: complaint
+      - label: _(Green Screen Vote)
+        value: green_screen_vote
 
   #### end dynamic form content ####
 
